# MyEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini
MyEngine/: CMakeLists.txt  vk_engine.h  vk_types.hpp
MyEngine/src/: MyEngine.h  mepch.h
MyEngine/src/MyEngine/: Application.cpp  Common.hpp  EntryPoint.h  Event.h  Log.cpp  Log.h  vk_engine.cpp  vk_engine.h
MyEngine/src/MyEngine/Core/: Application.cpp  Application.h  Assert.h  Base.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseCodes.h  Platform.h  Timestep.h  Window.cpp  Window.h
MyEngine/src/MyEngine/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
MyEngine/src/MyEngine/Filesystem/: Filesystem.h  file_helper.hpp
MyEngine/src/MyEngine/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
MyEngine/src/MyEngine/Math/: Math.h  Vector.h
MyEngine/src/MyEngine/Renderer/: Buffer.cpp  Buffer.h  Camera.h  EditorCamera.cpp  EditorCamera.h  GraphicsContext.cpp  GraphicsContext.h  RenderCommand.cpp  RenderCommand.h  RenderData.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  ShaderModule.cpp  ShaderModule.h  ShaderStage.cpp  ShaderStage.h  Vertex.h  VertexArray.cpp  VertexArray.h
MyEngine/src/MyEngine/Time/: Time.h
MyEngine/src/Platform/SDL/: SDLInput.cpp  SDLWindow.cpp  SDLWindow.h
MyEngine/src/Platform/Time/: SDLTime.cpp
MyEngine/src/Platform/Vulkan/: VulkanBuffer.cpp  VulkanBuffer.h  VulkanContext.h  VulkanRendererAPI.cpp  VulkanRendererAPI.h  VulkanShader.cpp  VulkanShader.h  VulkanShaderModule.cpp  VulkanShaderModule.h  VulkanShaderStage.cpp  VulkanShaderStage.h  VulkanVertexArray.cpp  VulkanVertexArray.h
MyEngine/src/Platform/Window/: SDLWindow.cpp  SDLWindow.h
Sandbox/: CMakeLists.txt
Sandbox/src/: ExampleLayer.cpp  ExampleLayer.h  SandboxApp.cpp
cmake/: compile_shaders.cmake  find_fmt.cmake  find_glm.cmake  find_sdl.cmake  find_spdlog.cmake  find_vulkan.cmake
scripts/: build.sh  run.sh
shaders/: shader.frag.glsl  shader.vert.glsl  vertexColor.frag.glsl  vertexColor.vert.glsl
src/: main.cpp
src/MyEngine/: Application.cpp  Application.h  Common.hpp  EntryPoint.h  MyEngine.h  file_helper.hpp  vk_engine.cpp  vk_engine.h  vk_types.hpp
